# css-tracers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: competitive-landscape.md  jinja2-ast-discovery.md  novelty-assessment.md
tests/: test_css_defs.py  test_html_refs.py  test_jinja_refs.py  test_js_refs.py  test_py_refs.py
tests/fixtures/: sample.html
tools/: css_defs.py  html_refs.py  jinja_refs.py  js_refs.py  py_refs.py
